tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_complex.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def compare_is_complex(a : 'complex', b : 'complex'):
    return a is b
